--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,6 +16,7 @@
 			
 		</div>
 <div id="blue-header"></div>
+<div id="center-block">
 <div id="content-wrapper">	
 <div id="pc-container">
 	<div class="background">
@@ -91,16 +92,23 @@
 			<div class="center-content clearfix"></div>
 
 			<div class="dictionaries-section clearfix">
-			<button class="word-delete"></button>
-			<button class="word-cancel"></button>
 			</div>
 			<div class="functions-language">
 				<h3>My settings</h3>
 				<div class="functions-language-slider">
 					<span>Language difficulty:</span>
 					<span class="level">Medium</span>
-					<input type="range" min="0" max="100" step="1" value="50"> 
-				</div>
+				<div class="range-filter">
+						<div class="range-controls">
+							<div class="scale"><div class="bar"></div></div>
+							<input type="radio" id="slidedifficult1" name="check" class="checkbox-cust">
+							<label for="slidedifficult1" class="circle circle1"></label>
+							<input type="radio" id="slidedifficult2" name="check" class="checkbox-cust">
+							<label for="slidedifficult2" class="circle circle2"></label>
+							<input type="radio" id="slidedifficult3" name="check" class="checkbox-cust">
+							<label for="slidedifficult3" class="circle circle3"></label>	
+						</div>
+					</div>
 				<div class="functions-settings-news">
 							<h4 class="functions-news-title">News Sources</h4>
 							<div class="functions-box">
@@ -133,7 +141,6 @@
 			</div>
 			</div>
 </div>
-	
 
 
 	<!--<div id="wrapper">
