--- a/client/styles/media-queries.css
+++ b/client/styles/media-queries.css
@@ -1,3 +1,5 @@
+
+
 @media screen and (max-width: 600px) {
 
 .lang-select {
@@ -21,6 +23,19 @@
   background: #4e6ba5;
   text-align: center;
   display: none;
+}
+#center-block {
+  width: 100%;
+}
+.showsettings {
+  width: 100%;
+}
+.menu {
+  width: 100%;
+}
+.center-content {
+  width: 96%;
+  margin: 0 auto;
 }
 
 .main-header {
@@ -106,11 +121,12 @@
     width: 320px !important;
   }
     .middle-section .center-content {
-    width: 380px;
+    width: 96%;
     background: white;
     padding-left: 0;
     margin-left: 8px;
     margin-top: 15px;
+    margin: 0 auto;
   }
 
 
@@ -161,6 +177,7 @@
   }
   .bottom-section .menu li:first-child {
     margin-left: 25px;
+    border-right: none;
   }
   .bottom-section>.menu {
     width: 414px;
@@ -208,7 +225,6 @@
 
   } 
   .menu li a{
-    border-right: 1px solid #d5d1d1;
     padding-right: 15px;
      padding-left: 15px;
     
@@ -227,12 +243,12 @@
   .allocation p {
     font: 13px 'Helvetica', sans-serif;
     background: #fbfeae;
-    padding-left: 75px;
     padding-top: 5px;
     padding-bottom: 5px;
     position: relative;
     top: 30px;
-    width: 344px;
+    padding-left: 20%;
+    width: 81.3%;
   }
   .allocation p:after {
     content: '';
@@ -894,7 +910,6 @@ input[type=range]::-webkit-slider-runnable-track {
 
   } 
   .menu li a{
-    border-right: 1px solid #d5d1d1;
     padding-right: 10px;
      padding-left: 10px;
     
@@ -913,13 +928,12 @@ input[type=range]::-webkit-slider-runnable-track {
   .allocation p {
     font: 13px 'Helvetica', sans-serif;
     background: #fbfeae;
-    padding-left: 65px;
     padding-top: 5px;
     padding-bottom: 5px;
     position: relative;
+    padding-left: 20%;
     bottom: 25px;
-    left: 25px;
-    width: 310px;
+    width: 86%
   }
   .allocation p:after {
     content: '';
@@ -1027,8 +1041,7 @@ input[type=range]::-webkit-slider-runnable-track {
  .showspan {
     font: 13px 'Helvetica-Med', sans-serif;
     text-align: center;
-    padding-left: 120px;
-    margin-left: 0px;
+    margin-left: 30%;
   }
   .translate-window {
   width: 266px;
@@ -1463,7 +1476,6 @@ input[type=range]::-webkit-slider-runnable-track {
   .bottom-section .menu li a{
     margin: 0;
       font-size: 15px;  
-     border-right: 1px solid #d5d1d1;
      padding-right: 5px;
      padding-left: 5px;
 
@@ -1502,7 +1514,6 @@ input[type=range]::-webkit-slider-runnable-track {
     margin: 0;
   }
   .menu li a{
-    border-right: 1px solid #d5d1d1;
     padding-right: 9px;
     padding-left: 10px;
     
@@ -1569,11 +1580,11 @@ input[type=range]::-webkit-slider-runnable-track {
 
   }
   .allocation p {
-    width: 280px;
+    width: 90%;
     position: relative;
     top: 1px;
     left: 0px;
-    padding-left: 40px;
+    padding-left: 10%;
   }
 
   .showsettings {
@@ -1603,7 +1614,6 @@ input[type=range]::-webkit-slider-runnable-track {
   .showspan {
     font: 13px 'Helvetica-Med', sans-serif;
     text-align: center;
-    padding-left: 80px;
   }
    .translate-window {
   width: 266px;
@@ -1951,5 +1961,34 @@ input[type=range]::-webkit-slider-runnable-track {
     font: 13px 'Helvetica-Med', sans-serif;
     height: 100px;
   }
+  #center-block {
+  width: 100%;
+}
+.showsettings {
+  width: 100%;
+}
+.bottom-section>.menu {
+  width: 100%;
+}
+.center-content {
+  width: 96%;
+  margin: 0 auto;
+}
+.showsettings:after {
+  left: 90%;
 
+}
+.middle-section {
+    width: 100%;
+}
+#content-wrapper {
+  width: 100%;
+}
+.bottom-section .menu li:first-child {
+  margin-left: 2%;
+}
+.allocation p {
+  width: 90%;
+  padding-left: 10%;
+}
 }
