--- a/client/styles/media-queries.css
+++ b/client/styles/media-queries.css
@@ -32,6 +32,7 @@
 }
 .menu {
   width: 100%;
+  z-index: 1000;
 }
 .center-content {
   width: 96%;
@@ -57,6 +58,10 @@
  body {
     background: white;
   }
+  .menu li a:hover {
+  color: #cc0f15;
+}
+
 
 
 
@@ -249,6 +254,8 @@
     top: 30px;
     padding-left: 20%;
     width: 81.3%;
+    margin-bottom: 30px;
+    z-index: 1;
   }
   .allocation p:after {
     content: '';
@@ -284,7 +291,7 @@
   }
   .name-news {
     margin-top: 10px;
-    margin-bottom: 0;
+    margin-bottom: 30px;
     font-size: 18px;
   }
   .name-news .word {
@@ -328,7 +335,7 @@
   .name-news {
     font: 17px 'Goodosf-Black', sans-serif;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
   .showsettings {
   display: block;
@@ -2007,76 +2014,265 @@ input[type=range]::-webkit-slider-runnable-track {
 
 
 
+.allocation p
 
+@media screen and (min-width: 700px) and (max-width: 1100px) { 
+  .menu {
+    width: 520px;
 
-@media only screen and (device-width: 768px) {
-  #blue-header {
-    width: 768px;
   }
-  #center-block {
-    width: 768px;
+  .top-line {
+    width: 520px;
+  }
+  .menu li a {
+    padding-left: 15px;
+    padding-right: 15px;
+
+  }
+  .center-content {
+    width: 510px;
+    padding-left: 10px;
+    padding-top: 5px;
+  }
+  .dictionaries-section {
+    margin-left: 530px;
+    height: 234px;
+    width: 260px;
+
+  }
+  .transcription-f span {
+    font-size: 11px;
+  }
+  .transcription-f .translating {
+    font-size: 11px;
+  }
+  .left-col-func {
+    padding-left: 5px;
+  }
+.text-block {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    padding-right: 15px;
+    width: 235px;
+    height: 77px;
+  }
+  .functions {
+    height: 50px;
+  }
+  .functions-language {
+    margin-left: 530px;
+    height: 330px;
+    top: 360px;
+    width: 240px;
+     padding-right: 20px;
   }
   .main-header {
+    width: 800px;
+  }
+  .lang-select {
+    width: 250px;
+  }
+  .left-title-word {
+    left: 50px;
+  }
+  #pc-container {
+    width: 800px;
+  }
+  #content-wrapper {
+    width: 800px;
+  }
+  #center-block {
+    width: 800px;
+  }
+  .middle-section {
+    width: 800px;  
+  }
+  .login-m {
+    padding-right: 20px;
+  }
+   .allocation p:after {
+    left: 290px;
+  }
+  .allocation p {
+    right: 100px;
+  }
+  .word-cancel, .word-delete {
+    top: 300px;
+    width: 130px;
+  }
+  .word-delete {
+    margin-left: 130px;
+  }
+  .sorting-block select {
+    position: relative;
+    bottom: 37px;
+    left: 60px;
+  }
+  .transcription-f {
+    margin-top: 5px;
+  }
+  .slider-check {
+    position: relative;
+    right: 76px;
+    top: -22px;
+  }
+  .slider-check2 {
+     position: relative;
+    top: -45px;
+    left: 73px;
+  }
+   .slider-check, .slider-check2 {
+    position: relative;
+  }
+  .functions-language h3 {
+    width: 240px;
+  }
+  .range-controls .scale {
+    width: 240px;
+  }
+  .menu li a:hover {
+  color: #cc0f15;
+}
+
+
+
+
+}
+@media only screen and (device-width: 768px) {
+     .menu {
+    width: 500px;
+
+  }
+  .top-line {
+    width: 500px;
+  }
+  .menu li a {
+    padding-left: 13px;
+    padding-right: 13px;
+
+  }
+  .center-content {
+    width: 490px;
+    padding-left: 10px;
+    padding-top: 5px;
+  }
+  .dictionaries-section {
+    margin-left: 490px;
+    height: 234px;
+    width: 260px;
+
+  }
+   #pc-container {
     width: 768px;
   }
   #content-wrapper {
     width: 768px;
   }
-  #pc-container {
-    width: 768px;
-  }
-  .enter-block {
-    width: 164px;
-    font-size: 14px;
-  }
-  .center-content {
-    width: 400px;
-  }
-  .bottom-section {
-    width: 768px;
-  }
-  .background {
+  #center-block {
     width: 768px;
   }
   .middle-section {
-    width: 768px;
-  }
-  .top-line {
-    width: 420px;
-  }
-  .menu {
-    width: 420px;
-  }
-  .menu li a {
-    padding-left: 6px;
-    padding-right: 6px;
-  }
-  .allocation p:after {
-    left: 260px;
-  }
-  .allocation {
-    margin-left: 70px;
+    width: 768px;  
   }
   .dictionaries-section {
-    margin-top: 40px;
-    margin-left: 430px;
-    width: 320px;
-    height: 310px;
-  }
-  .lang-select span {
-    margin-left: 70px;
+    margin-left: 515px;
+    width: 250px; 
+    height: 260px;
   }
   .functions-language {
-    margin-left: 430px;
-    width: 320px;
+    margin-left: 515px;
+    top: 360px;
+    width: 250px; 
+
+  }
+  .allocation p:after {
+    left: 320px;
+  }
+  .enter-block {
+    position: relative;
+    right: 24px;
+  }
+   .word-cancel, .word-delete {
+    top: 320px;
+    width: 127px;
+  }
+  .word-cancel {
+    margin-left: 0px;
+    background: #394778;
+  }
+  .word-delete {
+     margin-left: 125px;
+     background: #4e6ba5;
+     width: 
   }
   .slider-check, .slider-check2 {
+    width: 30px;
+  }
+  .slider-check {
+    right: 64px;
+  }
+  .slider-check2 {
+    top: -22px;
+    left: 50px;
+  }
+  .logo {
+    width: 248px;
+    font-size: 25px;
+  }
+  .logo-p {
+    left: 120px;
+    padding-left: 15px;
+  }
+  .lang-select {
+    width: 252px;
+  }
+  .sorting-block select {
     position: relative;
-    top: 20px;
+    bottom: -1px;
+    left: 15px;
   }
-  .login-m {
-    margin-left: 5px;
+  .circle3:after {
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: -88px;
+    width: 20px;
+    height: 20px;
   }
-
+  .text-block {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 97px;
+    width: 260px;
+  }
+  .menu li a:hover {
+  color: #cc0f15;
+}
+ .transcription-f span {
+    font-size: 11px;
+  }
+  .transcription-f .translating {
+    font-size: 11px;
+  }
+  .left-title-word {
+   
+    left: 40px;
+  }
+  .functions-language h3 {
+    background: #4e6ba5;
+  }
+  .left-title-auto {
+    position: relative;
+    right: 15px;
+  }
+  .circle3:after {
+    background: #394778;
+  }
+  .enter-block {
+    right: 230px;
+  }
 
 }
+
+
+
