--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1969,6 +1969,9 @@ input[type=range]::-webkit-slider-runnable-track {
 	width: 1000px;
 	margin: 0 auto;
 }
+.menu li a:hover {
+	color: #cc0f15;
+}
 
 	
 
