--- a/client/templates/dictionary-section.hbs
+++ b/client/templates/dictionary-section.hbs
@@ -39,6 +39,7 @@
 </div>
 <div class="clearfix"></div>
 <div class="dictionary">
+    <div class="text-block">
     <div class="transcription-f">
      <input type="checkbox" class="dict-checkbox" id="1">
              <label for="1"><div class="tr-words"><span class ='transition-word'>Transition</span> <span class="transcription-word">[trænˈsɪʒən]</span></div>
@@ -54,6 +55,7 @@
        <label for="3"><div class="tr-words"><span class ='transition-word'>Transition</span> <span class="transcription-word">[trænˈsɪʒən]</span></div>
         <h5 class="translating">переход, перевод</h5></label>      
     </div>
-    <div class="word-delete">Delete selected</div>
+    </div>
+      <div class="word-delete">Delete selected</div>
             <div class="word-cancel">Cancel</div>
 </div>
