--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -81,14 +81,14 @@
 
 			<div class="bottom-section">
 				<ul class="menu clearfix">
+					<li><a href="#category/world"><span>World</span></a></li>
 					<li><a href="#category/politics"><span>Politics</span></a></li>
-					<li><a href="#category/social"><span>Social</span></a></li>
-					<li><a href="#category/economics"><span>Economics</span></a></li>
-					<li><a href="#category/sport"><span>Sport</span></a></li>
+					<!--<li><a href="#category/social"><span>Social</span></a></li>-->
+					<!--<li><a href="#category/economics"><span>Economics</span></a></li>-->
+					<!--<li><a href="#category/sport"><span>Sport</span></a></li>-->
 					<li><a href="#category/science"><span>Science</span></a></li>
 					<li><a href="#category/tech"><span>Technology</span></a></li>
-					<li><a href="#category/culture"><span>Culture</span></a></li>
-					<li><a href="#category/world"><span>World</span></a></li>
+					<li><a href="#category/culture"><span>Culture</span></a></li
 				</ul>
 			</div>	
 		<div class="middle-section">
@@ -100,9 +100,9 @@
 	
 			<div class="center-content clearfix"></div>
 
-			<div class="dictionaries-section clearfix">
+			<div class="dictionaries-section clearfix dictionaries-section-big">
 			</div>
-			<div class="functions-language">
+			<div class="functions-language functions-language-mini">
 				<h3>My settings</h3>
 				<div class="functions-language-slider">
 					<span>Language difficulty:</span>
