--- a/client/templates/dictionary-section.hbs
+++ b/client/templates/dictionary-section.hbs
@@ -56,6 +56,8 @@
         <h5 class="translating">переход, перевод</h5></label>      
     </div>
     </div>
-      <div class="word-delete">Delete selected</div>
-            <div class="word-cancel">Cancel</div>
+   
+      <div class="word-delete bottom-button">Delete selected</div>
+            <div class="word-cancel bottom-button">Cancel</div>
+         
 </div>
