--- a/client/styles/media-queries.css
+++ b/client/styles/media-queries.css
@@ -33,6 +33,7 @@
 .menu {
   width: 100%;
   z-index: 1000;
+  position: fixed;
 }
 .center-content {
   width: 96%;
@@ -129,10 +130,9 @@
     width: 96%;
     background: white;
     padding-left: 0;
-    margin-left: 8px;
-    margin-top: 15px;
     margin: 0 auto;
     margin-left: 12px;
+    margin-top: 90px;
 
   }
 
@@ -191,7 +191,7 @@
     height: 34px;
     margin: 0;
     background: #ebebeb;
-    position: relative;
+    position: fixed;
     right: 0px;
     top: 49px;
    
@@ -242,10 +242,11 @@
   .top-line {
     width: 100%;
     margin: 0 auto;
-    margin-top: 35px;
     background: white;
-    height: 30px;
     display: block;
+    position: fixed;
+    top: 80px;
+    right: 5px;
   }
   .allocation p {
     font: 13px 'Helvetica', sans-serif;
@@ -253,7 +254,6 @@
     padding-top: 5px;
     padding-bottom: 5px;
     position: relative;
-    top: 30px;
     padding-left: 20%;
     width: 81.3%;
     z-index: 1;
@@ -276,9 +276,8 @@
   .allocation {
     width: 414px;
     margin: 0;
-    position: relative;
-    bottom: 16px;
-    left: -12px;
+    
+    margin-right: 12px;
     
   }
   .showbtn {
@@ -326,8 +325,7 @@
   }
   .news {
     font: 14px 'Helvetica-Med', sans-serif;
-    letter-spacing: 0px;
-    height: 120px;
+    height: 100px;
     
   }
   .word {
@@ -757,7 +755,9 @@ input[type=range]::-webkit-slider-runnable-track {
 .translate-window-transcription {
   font-family: 'HelveticaNeu', sans-serif;
 }
+.novelty {
 
+}
 
 
 
@@ -881,8 +881,7 @@ input[type=range]::-webkit-slider-runnable-track {
     height: 34px;
     margin: 0;
     background: #ebebeb;
-    position: relative;
-    bottom: 2px;
+    position: fixed;
    
   }
 
@@ -927,20 +926,18 @@ input[type=range]::-webkit-slider-runnable-track {
   .top-line {
     width: 100%;
     margin: 0 auto;
-    margin-top: 35px;
     height: 30px;
     display: block;
     background: white;
+    position: fixed;
+    left: 20px;
+    top: 54px;
   }
   .allocation p {
     font: 13px 'Helvetica', sans-serif;
     background: #fbfeae;
     padding-top: 5px;
     padding-bottom: 5px;
-    position: relative;
-    padding-left: 20%;
-    bottom: 25px;
-    width: 86%
   }
   .allocation p:after {
     content: '';
@@ -961,7 +958,6 @@ input[type=range]::-webkit-slider-runnable-track {
     width: 375px;
     margin: 0;
     position: relative;
-    bottom: 16px;
     left: -25px;
     
   }
@@ -1537,11 +1533,12 @@ input[type=range]::-webkit-slider-runnable-track {
     display: block;
     float: right;
     height: 54px;
-    width: 53px;
+    width: 56px;
     background: #4e6ba5 url('../img/enter-icon.png') no-repeat;
     background-position: 14px 14px;
     position: relative;
     top: -54px;
+    left: 4px;
     background-size: 50%;
   }
 
@@ -1564,6 +1561,8 @@ input[type=range]::-webkit-slider-runnable-track {
   }
   .allocation p {
     font: 13px 'Helvetica', sans-serif;
+    padding-left: 15%;
+    width: 100%;
    
   }
    .newsinform {
@@ -1583,16 +1582,7 @@ input[type=range]::-webkit-slider-runnable-track {
     width: 320px;
     margin: 0;
     position: relative;
-    left: 0;
-    top: 28px;
 
-  }
-  .allocation p {
-    width: 90%;
-    position: relative;
-    top: 1px;
-    left: 0px;
-    padding-left: 10%;
   }
 
   .showsettings {
@@ -1955,16 +1945,11 @@ input[type=range]::-webkit-slider-runnable-track {
   .top-line {
     width: 100%;
     margin: 0 auto;
-    margin-top: 20px;
+    position: fixed;
     background: white;
-    height: 30px;
     display: block;
+    top: 80px;
 }
-  .middle-section .center-content {
-    margin-top: 30px;
-    width: 310px;
-    background: white;
-  }
   .news {
     font: 13px 'Helvetica-Med', sans-serif;
     height: 100px;
@@ -1977,10 +1962,12 @@ input[type=range]::-webkit-slider-runnable-track {
 }
 .bottom-section>.menu {
   width: 100%;
+  position: fixed;
 }
-.center-content {
+.middle-section .center-content {
   width: 96%;
   margin: 0 auto;
+   margin-top: 100px;
 }
 .showsettings:after {
   left: 90%;
@@ -1994,10 +1981,6 @@ input[type=range]::-webkit-slider-runnable-track {
 }
 .bottom-section .menu li:first-child {
   margin-left: 6px;
-}
-.allocation p {
-  width: 90%;
-  padding-left: 10%;
 }
 
 }
