--- a/client/templates/dictionary-section.hbs
+++ b/client/templates/dictionary-section.hbs
@@ -38,11 +38,11 @@
     </select>
 </div>
 <div class="clearfix"></div>
-<div class="dictionary">
+<div class="dictionary dictionary-minify">
     <div class="text-block">
     </div>
    
-      <div class="word-delete bottom-button">Delete selected</div>
-            <div class="word-cancel bottom-button">Cancel</div>
+      <div class="word-delete top">Delete selected</div>
+            <div class="word-cancel top">Cancel</div>
          
 </div>
